# swarmsim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Controller.cpp  Controller.hpp  Drone.hpp  Formation.hpp  Metrics.hpp  Mode.hpp  Recorder.cpp  Recorder.hpp  Role.hpp  Sim.cpp  Sim.hpp  SpatialHash.hpp  Utils.hpp  Vec3.hpp  core.cpp  formations.cpp  main.cpp
src/assignment/: Assignment.cpp  Assignment.hpp
